--- a/src/register.css
+++ b/src/register.css
@@ -8,7 +8,7 @@
     margin:1rem 2rem;
     border:1px black solid;
     border-radius: 1rem;
-    height:100vh;
+   
     padding:1.5rem;
     background-color: #edede9;
     display: flex;
@@ -200,3 +200,12 @@ background-color: white;
     background-color:green;
     border:1px solid green;
 }
+
+.required:after {
+    content:" *";
+    color: red;
+  }
+
+  p{
+    color:red;
+  }
